--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1>New book</h1>
+<%= form_with model:@book, local:true do |f| %>
+<h2>Title</h2>
+<%= f.text_field :Title %>
+<h3>Body</h3>
+<%= f.text_area :Body %>
+<p><%= f.submit 'Create Book' %></p>
+<% end %>
