--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,16 @@
-<h1>New book</h1>
+<h1>Books</h1>
+<% @books.each do |book| %>
+<p>Title</p>
+<span><%= book.title %></span>
+<p>Body</p>
+<span><%= book.body %></span>
+<% end %>
+
+<h2>New book</h2>
 <%= form_with model:@book, local:true do |f| %>
-<h2>Title</h2>
-<%= f.text_field :Title %>
+<h3>Title</h3>
+<%= f.text_field :title %>
 <h3>Body</h3>
-<%= f.text_area :Body %>
+<%= f.text_area :body %>
 <p><%= f.submit 'Create Book' %></p>
 <% end %>
