--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,16 +1,28 @@
-<h1>Books</h1>
-<% @books.each do |book| %>
-<p>Title</p>
-<span><%= book.title %></span>
-<p>Body</p>
-<span><%= book.body %></span>
-<% end %>
+<h1 class="main-heading">Books</h1>
 
-<h2>New book</h2>
+  <table>
+    <tr>
+      <th class="table-title">Title</th>
+      <th class="table-body">Body</th>
+    </tr>
+  <% @books.each do |book| %>
+    <tr>
+      <td class="table-data"><%= book.title %></td>
+      <td class="table-data"><%= book.body %></td>
+      <td><%= link_to 'Show', book_path(book.id) %></td>
+      <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+      <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+    </tr>
+  <% end %>
+  </table>
+
+
+
+<h2 class="create-heading">New book</h2>
 <%= form_with model:@book, local:true do |f| %>
-<h3>Title</h3>
+<h3 class="create-title">Title</h3>
 <%= f.text_field :title %>
-<h3>Body</h3>
+<h3 class="create-title">Body</h3>
 <%= f.text_area :body %>
 <p><%= f.submit 'Create Book' %></p>
 <% end %>
