--- a/app/views/books/top.html.erb
+++ b/app/views/books/top.html.erb
@@ -1,9 +1,7 @@
-<h1>ようこそ Bookersへ!</h1>
-<p>
-  Bookers では、さまざまな書籍に関するあなたの意見や<br>
+<h1 class="top-heading">ようこそ Bookersへ!</h1>
+<p class="top-text">Bookers では、さまざまな書籍に関するあなたの意見や</p>
+
+<p class="top-text">印象を共有し交換することができます</p>
 
 
-印象を共有し交換することができます</p>
-
-
-<p>start</p>
+<%= link_to 'Start', books_path %>
