--- a/app/views/books/top.html.erb
+++ b/app/views/books/top.html.erb
@@ -1,7 +1,7 @@
 <h1 class="top-heading">ようこそ Bookersへ!</h1>
-<p class="top-text">Bookers では、さまざまな書籍に関するあなたの意見や</p>
+<p class="top-text"><b class="big">Bookers</b> では、さまざまな書籍に関するあなたの意見や</p>
 
 <p class="top-text">印象を共有し交換することができます</p>
 
 
-<%= link_to 'Start', books_path %>
+<p class="top-text"><%= link_to 'Start', books_path %></p>
