--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,28 +1,28 @@
-<h1 class="main-heading">Books</h1>
-
-  <table>
-    <tr>
-      <th class="table-title">Title</th>
-      <th class="table-body">Body</th>
-    </tr>
-  <% @books.each do |book| %>
-    <tr>
-      <td class="table-data"><%= book.title %></td>
-      <td class="table-data"><%= book.body %></td>
-      <td><%= link_to 'Show', book_path(book.id) %></td>
-      <td><%= link_to "Edit", edit_book_path(book.id) %></td>
-      <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
-    </tr>
-  <% end %>
-  </table>
-
-
-
-<h2 class="create-heading">New book</h2>
-<%= form_with model:@book, local:true do |f| %>
-<h3 class="create-title">Title</h3>
-<%= f.text_field :title %>
-<h3 class="create-title">Body</h3>
-<%= f.text_area :body %>
-<p><%= f.submit 'Create Book' %></p>
-<% end %>
+<main>
+  <h1 class="main-heading">Books</h1>
+    <table>
+      <tr>
+        <th class="table-title">Title</th>
+        <th class="table-body">Body</th>
+      </tr>
+    <% @books.each do |book| %>
+      <tr>
+        <td class="table-data"><%= book.title %></td>
+        <td class="table-data"><%= book.body %></td>
+        <td class="table-data"><%= link_to 'Show', book_path(book.id) %></td>
+        <td class="table-data"><%= link_to "Edit", edit_book_path(book.id) %></td>
+        <td class="table-data"><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+      </tr>
+    <% end %>
+    </table>
+    <div class="create-book">
+      <h2 class="create-heading"><b>New book</b></h2>
+    <%= form_with model:@book, local:true do |f| %>
+      <h3 class="create-title">Title</h3>
+      <%= f.text_field :title %>
+      <h3 class="create-title">Body</h3>
+      <%= f.text_area :body %>
+      <p><%= f.submit 'Create Book' %></p>
+    </div>
+    <% end %>
+</main>
