--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,9 @@
-<h2 class="show-category">Title:</h2>
-<div class="show-title"><%= @book.title %></div>
-<h2 class="show-category">Body:</h2>
-<div class="show-title"><%= @book.body %></div>
+<p class="show-block">
+  <h2 class="show-category"><strong>Title:</strong></h2>
+  <div class="show-title"><%= @book.title %></div>
+</p>
+<p class="show-block">
+  <h2 class="show-category"><strong>Body</strong>:</h2>
+  <div class="show-title"><%= @book.body %></div>
+</p>
 <p class="tab"><%= link_to "Edit", edit_book_path(@book.id) %> | <%= link_to "Back", books_path(@book.id) %></p>
