--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -6,6 +6,6 @@
     <h4 class="edit-title">Body</h4>
     <%= f.text_area :body %>
     <p><%= f.submit 'Update Book' %></p>
-    <p><%= link_to 'Show', book_path(@book.id) %> | <%= link_to "Back", books_path(@book.id) %></p>
+    <p class="edit-tab"><%= link_to 'Show', book_path(@book.id) %> | <%= link_to "Back", books_path(@book.id) %></p>
   <% end %>
 </body>
