--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,7 +6,7 @@
         <th class="table-body">Body</th>
       </tr>
     <% @books.each do |book| %>
-      <tr>
+      <tr class="table-row">
         <td class="table-data"><%= book.title %></td>
         <td class="table-data"><%= book.body %></td>
         <td class="table-data"><%= link_to 'Show', book_path(book.id) %></td>
