--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,11 +1,21 @@
 <body>
 <h1 class="edit-heading">Editing Book</h1>
+ <% if @book.errors.any? %>
+　　<div id="error_explanation" class="alert alert-danger">
+      <h2>error</h2>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li class="error"><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+ <% end %>
   <%= form_with model:@book, url:"/books/#{@book.id}", local:true do |f| %>
     <h4 class="edit-title">Title</h4>
     <%= f.text_field :title %>
     <h4 class="edit-title">Body</h4>
     <%= f.text_area :body %>
     <p><%= f.submit 'Update Book' %></p>
-    <p class="edit-tab"><%= link_to 'Show', book_path(@book.id) %> | <%= link_to "Back", books_path(@book.id) %></p>
+    <p class="edit-tab"><%= link_to 'Show', book_path(@book.id) %> | <%= link_to "Back", books_path %></p>
   <% end %>
 </body>
