--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,7 +2,7 @@
 <h1 class="edit-heading">Editing Book</h1>
  <% if @book.errors.any? %>
 　　<div id="error_explanation" class="alert alert-danger">
-      <h2>error</h2>
+      <h2 class="error"><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
       <ul>
         <% @book.errors.full_messages.each do |message| %>
           <li class="error"><%= message %></li>
