--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -17,7 +17,7 @@
     </table>
     <% if @book.errors.any? %>
 　　<div id="error_explanation" class="alert alert-danger">
-　　  <h2>error</h2>
+　　  <h2 class="error"><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
       <ul>
         <% @book.errors.full_messages.each do |message| %>
           <li class="error"><%= message %></li>
