--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,7 @@
       </tr>
     <% end %>
     </table>
-    gi<% if @book.errors.any? %>
+    gi"<% if @book.errors.any? %>
 　　<div id="error_explanation" class="alert alert-danger">
 　　  <h2 class="error"><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
       <ul>
